--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ __pycache__/
 *.so
 
 Q1_Task1_all_text_output.txt
+data/CSV1.csv
+data/CSV2.csv
+data/CSV3.csv
+data/CSV4.csv
 
 # Distribution / packaging
 .Python
